--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard | Programa Trilhas</title>
+    <title>Dashboard | Programa Jovem Tech</title>
     <link rel="stylesheet" href="./Styles/dashboard.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="dashboard.js" defer></script> 
@@ -13,16 +13,26 @@
     <div class="dashboard-container">
         <aside class="sidebar">
             <div class="logo">
-                <img src="Assets/image1.png" alt="Logo" class="sidebar-logo">
+                <img src="Assets/image1.png" alt="Logo do Jovem Tech" class="sidebar-logo">
                 <h2>Jovem Tech</h2>
             </div>
             <nav class="main-nav">
                 <ul>
-                    <li class="nav-item active"><a href="#"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
-                    <li class="nav-item"><a href="#"><i class="fas fa-user"></i> Meu Perfil</a></li>
-                    <li class="nav-item"><a href="#"><i class="fas fa-book"></i> Minha Trilha</a></li>
-                    <li class="nav-item"><a href="#"><i class="fas fa-calendar-alt"></i> Eventos</a></li>
-                    <li class="nav-item"><a href="#"><i class="fas fa-comments"></i> Suporte</a></li>
+                    <li class="nav-item active" id="nav-dashboard">
+                        <a href="#" data-target="dashboard-section"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
+                    </li>
+                    <li class="nav-item" id="nav-profile">
+                        <a href="#" data-target="profile-section"><i class="fas fa-user"></i> Meu Perfil</a>
+                    </li>
+                    <li class="nav-item" id="nav-trail">
+                        <a href="#" data-target="trail-section"><i class="fas fa-book"></i> Minha Trilha</a>
+                    </li>
+                    <li class="nav-item" id="nav-events">
+                        <a href="#" data-target="events-section"><i class="fas fa-calendar-alt"></i> Eventos</a>
+                    </li>
+                    <li class="nav-item" id="nav-support">
+                        <a href="#" data-target="support-section"><i class="fas fa-comments"></i> Suporte</a>
+                    </li>
                 </ul>
             </nav>
             <div class="sidebar-footer">
@@ -35,41 +45,159 @@
                 <h1>Bem-vindo ao seu Dashboard!</h1>
                 <div class="user-info">
                     <span id="welcome-message">Olá, Usuário!</span>
-                    <img src="Assets/default-avatar.png" alt="Avatar" class="user-avatar">
+                    <img src="Assets/default-avatar.png" alt="Avatar do Usuário" class="user-avatar">
                 </div>
             </header>
 
-            <section class="overview-cards">
-                <div class="card">
-                    <i class="fas fa-chart-line card-icon"></i>
-                    <h3>Progresso da Trilha</h3>
-                    <p>Você completou <strong>30%</strong> da sua trilha de Front-end.</p>
-                    <div class="progress-bar-container">
-                        <div class="progress-bar" style="width: 30%;"></div>
+            <section id="dashboard-section" class="content-section">
+                <section class="overview-cards">
+                    <div class="card">
+                        <i class="fas fa-chart-line card-icon"></i>
+                        <h3>Progresso da Trilha</h3>
+                        <p>Você completou <strong>30%</strong> da sua trilha de Front-end.</p>
+                        <div class="progress-bar-container">
+                            <div class="progress-bar" style="width: 30%;"></div>
+                        </div>
                     </div>
-                </div>
-                <div class="card">
-                    <i class="fas fa-graduation-cap card-icon"></i>
-                    <h3>Próximo Módulo</h3>
-                    <p><strong>Módulo 2:</strong> JavaScript Essencial</p>
-                    <p class="card-detail">Disponível em: 15/Julho</p>
-                </div>
-                <div class="card">
-                    <i class="fas fa-tasks card-icon"></i>
-                    <h3>Tarefas Pendentes</h3>
-                    <p>Você tem <strong>2</strong> tarefas para hoje.</p>
-                    <p class="card-detail">Ver todas as tarefas</p>
+                    <div class="card">
+                        <i class="fas fa-graduation-cap card-icon"></i>
+                        <h3>Próximo Módulo</h3>
+                        <p><strong>Módulo 2:</strong> JavaScript Essencial</p>
+                        <p class="card-detail">Disponível em: 15/Julho</p>
+                    </div>
+                    <div class="card">
+                        <i class="fas fa-tasks card-icon"></i>
+                        <h3>Tarefas Pendentes</h3>
+                        <p>Você tem <strong>2</strong> tarefas para hoje.</p>
+                        <p class="card-detail">Ver todas as tarefas</p>
+                    </div>
+                </section>
+
+                <section class="recent-activity">
+                    <h2>Atividades Recentes</h2>
+                    <ul>
+                        <li><span class="activity-date">10/Jul</span> - Módulo 1 de Front-end concluído.</li>
+                        <li><span class="activity-date">08/Jul</span> - Nova aula de CSS avançado disponível.</li>
+                        <li><span class="activity-date">05/Jul</span> - Participou do webinar "Futuro do Desenvolvimento Web".</li>
+                    </ul>
+                </section>
+            </section> 
+
+            <section id="profile-section" class="content-section hidden">
+                <h2>Meu Perfil</h2>
+                <div class="profile-card">
+                    <div class="profile-avatar">
+                        <img src="Assets/default-avatar.png" alt="Avatar do Usuário">
+                        <button class="btn-change-avatar"><i class="fas fa-camera"></i> Alterar Avatar</button>
+                    </div>
+                    <div class="profile-info">
+                        <p><strong>Nome Completo:</strong> <span id="profile-nome">Usuário de Teste</span></p>
+                        <p><strong>Email:</strong> <span id="profile-email">usuario@example.com</span></p>
+                        <p><strong>Username:</strong> <span id="profile-username">usuario.teste</span></p>
+                        <p><strong>CPF:</strong> <span id="profile-cpf">XXX.XXX.XXX-XX</span></p>
+                        <p><strong>Data de Nascimento:</strong> <span id="profile-dataNascimento">DD/MM/AAAA</span></p>
+                        <p><strong>Sexo:</strong> <span id="profile-sexo">Não Informado</span></p>
+                        <p><strong>Telefone:</strong> <span id="profile-telefone">(XX) XXXXX-XXXX</span></p>
+                        <p><strong>CEP:</strong> <span id="profile-cep">XXXXX-XXX</span></p>
+                        <p><strong>Endereço:</strong> <span id="profile-endereco">Rua Exemplo, 123 - Cidade, Estado</span></p>
+                        <p><strong>Trilha de Aprendizagem:</strong> <span id="profile-trilha">Desenvolvimento Web - Front-end</span></p>
+                        <button class="btn-edit-profile"><i class="fas fa-edit"></i> Editar Perfil</button>
+                        <button class="btn-change-password"><i class="fas fa-key"></i> Alterar Senha</button>
+                    </div>
                 </div>
             </section>
 
-            <section class="recent-activity">
-                <h2>Atividades Recentes</h2>
-                <ul>
-                    <li><span class="activity-date">10/Jul</span> - Módulo 1 de Front-end concluído.</li>
-                    <li><span class="activity-date">08/Jul</span> - Nova aula de CSS avançado disponível.</li>
-                    <li><span class="activity-date">05/Jul</span> - Participou do webinar "Futuro do Desenvolvimento Web".</li>
-                </ul>
+            <section id="trail-section" class="content-section hidden">
+                <h2>Minha Trilha de Aprendizagem</h2>
+                <div class="trail-overview">
+                    <h3>Trilha Atual: Desenvolvimento Web - Front-end</h3>
+                    <p><strong>Módulos Concluídos:</strong> 3 de 10</p>
+                    <p><strong>Próximo Módulo:</strong> JavaScript Essencial (Início: 15/Julho)</p>
+                    <div class="modules-list">
+                        <h4>Meus Módulos:</h4>
+                        <ul>
+                            <li><i class="fas fa-check-circle completed"></i> Módulo 1: Fundamentos de HTML e CSS</li>
+                            <li><i class="fas fa-check-circle completed"></i> Módulo 2: Responsividade e Flexbox</li>
+                            <li><i class="fas fa-check-circle completed"></i> Módulo 3: Introdução ao JavaScript</li>
+                            <li><i class="fas fa-circle-notch in-progress"></i> Módulo 4: JavaScript Essencial</li>
+                            <li><i class="fas fa-circle-regular upcoming"></i> Módulo 5: Requisições Assíncronas (APIs)</li>
+                            </ul>
+                    </div>
+                    <button class="btn-view-certificate"><i class="fas fa-award"></i> Ver Certificado</button>
+                </div>
             </section>
+
+            <section id="events-section" class="content-section hidden">
+                <h2>Eventos</h2>
+                <div class="events-list">
+                    <h3>Próximos Eventos:</h3>
+                    <ul>
+                        <li>
+                            <div class="event-item">
+                                <span class="event-date">20/Jul</span>
+                                <span class="event-title">Webinar: Carreira em Desenvolvimento Backend</span>
+                                <span class="event-time">19:00 - 20:30 (Online)</span>
+                                <button class="btn-participate">Participar</button>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="event-item">
+                                <span class="event-date">05/Ago</span>
+                                <span class="event-title">Workshop Presencial: Introdução a Databases (São Paulo)</span>
+                                <span class="event-time">09:00 - 17:00</span>
+                                <button class="btn-details">Ver Detalhes</button>
+                            </div>
+                        </li>
+                    </ul>
+                    <h3>Eventos Anteriores:</h3>
+                    <ul>
+                        <li><span class="event-date">05/Jul</span> - Webinar: Futuro do Desenvolvimento Web</li>
+                        <li><span class="event-date">28/Jun</span> - Mentoria Coletiva: Dúvidas de HTML/CSS</li>
+                    </ul>
+                </div>
+            </section>
+
+            <section id="support-section" class="content-section hidden">
+                <h2>Suporte</h2>
+                <div class="support-contact">
+                    <p>Se você precisa de ajuda, utilize os canais abaixo ou envie uma nova solicitação.</p>
+                    <div class="contact-options">
+                        <div class="contact-card">
+                            <i class="fas fa-envelope-open-text contact-icon"></i>
+                            <h4>Email</h4>
+                            <p>suporte@jovemtech.com.br</p>
+                            <a href="mailto:suporte@jovemtech.com.br" class="btn-contact">Enviar Email</a>
+                        </div>
+                        <div class="contact-card">
+                            <i class="fab fa-whatsapp contact-icon"></i>
+                            <h4>WhatsApp</h4>
+                            <p>+55 (XX) XXXXX-XXXX</p>
+                            <a href="https://wa.me/SEUNUMERO" target="_blank" class="btn-contact">Iniciar Conversa</a>
+                        </div>
+                        <div class="contact-card">
+                            <i class="fas fa-question-circle contact-icon"></i>
+                            <h4>FAQ</h4>
+                            <p>Perguntas Frequentes</p>
+                            <a href="#" class="btn-contact">Ver FAQ</a>
+                        </div>
+                    </div>
+                    <div class="new-request-form">
+                        <h3>Abrir Nova Solicitação</h3>
+                        <form>
+                            <div class="form-group">
+                                <label for="subject">Assunto:</label>
+                                <input type="text" id="subject" name="subject" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="description">Descrição:</label>
+                                <textarea id="description" name="description" rows="5" required></textarea>
+                            </div>
+                            <button type="submit" class="btn-submit-request">Enviar Solicitação</button>
+                        </form>
+                    </div>
+                </div>
+            </section>
+
         </main>
     </div>
 </body>
