Sincroniza arquivos do projeto após limpeza do historico e LFS

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -113,6 +113,15 @@
                     <h3>Trilha Atual: Desenvolvimento Web - Front-end</h3>
                     <p><strong>Módulos Concluídos:</strong> 3 de 10</p>
                     <p><strong>Próximo Módulo:</strong> JavaScript Essencial (Início: 15/Julho)</p>
+
+                    <div class="video-container">
+                        <h4><i class="fas fa-play-circle"></i> Introdução à Programação (Aula Inaugural)</h4>
+                        <video controls preload="metadata" class="intro-video">
+                            <source src="./videos/introducao.mp4" type="video/mp4">
+                            Seu navegador não suporta a tag de vídeo.
+                        </video>
+                        <p class="video-description">Assista a nossa aula inaugural para ter uma visão geral do que te espera nesta jornada de aprendizado!</p>
+                    </div>
                     <div class="modules-list">
                         <h4>Meus Módulos:</h4>
                         <ul>
