--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Formulário de Inscrição </title>
-    <link rel="stylesheet" href="./Styles/Home.css">
-    <script src="Home.js" defer></script>
+    <link rel="stylesheet" href="./Styles/index.css">
+    <script src="index.js" defer></script>
 </head>
 <body class="HalfOne">
     <div class="FirstHalf">
