--- a/public/Login.html
+++ b/public/Login.html
@@ -27,9 +27,9 @@
             <nav class="Headers">
                 <div class="Cadastro">
                     <p> Não tem conta? </p>
-                    <p><a href="Home.html"> <strong>Cadastre-se</strong> aqui </a></p>
+                    <p><a href="index.html"> <strong>Cadastre-se</strong> aqui </a></p>
                 </div>
-                <a class="Cancel" href="Home.html"> Cadastre-se </a> 
+                <a class="Cancel" href="index.html"> Cadastre-se </a> 
                 <button type="submit" class="Inscrição"> Entrar </button>
             </nav>
         </form>
